Basic site structure

--- a/index.html
+++ b/index.html
@@ -6,11 +6,103 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="style.css" rel="stylesheet" type="text/css">
   <script src="./script.js" defer></script>
-  <title>Document</title>
+  <title>Tim Death</title>
 </head>
 
 <body>
+  <header>
+    <div class="logo-name-wrapper">
+      <img src="./images/logo-transparent.png" alt="logo" class="logo">
+      <div class="name-wrapper">
+        <div class="name">TIM Death</div>
+        <div class="servicii">Servicii Funerare</div>
+      </div>
+    </div>
+  </header>
 
+  <main>
+    <div class="welcome-wrapper">
+      <div class="welcome-text-wrapper">
+        <h2 class="title">Agentia funerara TIM Death </h2>
+        <div> este aici sa te ajute in momentele cele mai grele</div>
+      </div>
+    </div>
+    <div class="services-wrapper">
+      <h2 class="services-title">Servicii</h2>
+      <div class="services">
+
+        <div class="service-card" id="1">
+          <img src="./images/transport-funerar.jpg" alt="">
+          <div class="service-text"><span>1. Transport Funerar. </span>Transportul defunctului de la locul decesului
+            (spital,
+            domiciliu, etc.) la capela, biserica sau cimitir.</div>
+        </div>
+
+        <div class="service-card" id="2">
+          <img src="./images/toaletare.jpg" alt="">
+          <div class="service-text"><span>2. Pregatirea si Toaletarea Decedatului. </span>Imbalsamarea si pregatirea
+            defunctului pentru inmormantare.
+            Imbracarea si asezarea in sicriu.</div>
+        </div>
+
+        <div class="service-card" id="3">
+          <img src="./images/casketa.png" alt="">
+          <div class="service-text"><span>3. Servicii de Sicrie. </span>Oferirea de sicrie de diferite modele, marimi si
+            materiale, in functie de bugetul si dorintele familiei.</div>
+        </div>
+
+        <div class="service-card" id="4">
+          <img src="./images/slujaba-religioasa.jpg" alt="">
+          <div class="service-text"><span>4. Organizarea Slujbei Religioase. </span>Colaborarea cu preoti pentru
+            organizarea slujbei religioase de inmormantare.
+            Aranjamente pentru locatia unde va avea loc ceremonia (capela, biserica, etc.).</div>
+        </div>
+
+        <div class="service-card" id="5">
+          <img src="./images/necrolog.jpg" alt="">
+          <div class="service-text"><span>5. Publicarea Necrologului. </span>Publicarea unui anunt funerar (necrolog) in
+            ziare, la radio, sau pe diverse platforme online.</div>
+        </div>
+
+        <div class="service-card" id="6">
+          <img src="./images/corona.png" alt="">
+          <div class="service-text"><span>6. Servicii Florale. </span>Aranjamente florale pentru sicriu, capela,
+            biserica sau cimitir (coroane, buchete, jerbe).</div>
+        </div>
+
+        <div class="service-card" id="7">
+          <img src="./images/acte.jpg" alt="">
+          <div class="service-text"><span>7. Obtinerea Actelor Necesare. </span>Obtinerea certificatului de deces.
+            Obtinerea
+            autorizatiilor necesare pentru inmormantare. Gestionarea documentelor pentru repatriere (in cazul
+            transportului international).</div>
+        </div>
+
+        <div class="service-card" id="8">
+          <img src="./images/cremat.png" alt="">
+          <div class="service-text"><span>8. Servicii de Incinerare. </span>In cazul in care familia alege incinerarea,
+            firma de pompe funebre poate organiza acest proces.</div>
+        </div>
+
+        <div class="service-card" id="9">
+          <img src="./images/piatra-funerare.jpg" alt="">
+          <div class="service-text"><span>9. Monumente Funerare. </span>Oferirea de pietre funerare sau monumente
+            personalizate.
+            Aranjarea lucrarilor de intretinere si amenajare a mormantului.</div>
+        </div>
+
+        <div class="service-card" id="11">
+          <img src="./images/consiliere.jpg" alt="">
+          <div class="service-text"><span>10. Consiliere Funerara. </span>Oferirea de consiliere privind formalitatile
+            si procedurile de inmormantare.
+            Sprijin emotional pentru familie in aceasta perioada dificila.</div>
+        </div>
+
+      </div>
+    </div>
+    </div>
+
+  </main>
 </body>
 
 </html>
