Remove Mnoument Service and replace with Post-funeral service

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
         </div>
 
         <div class="service-card" id="9">
-          <img src="./images/piatra-funerare.jpg" alt="">
-          <div class="service-text"><span>9. Monumente Funerare. </span>Oferirea de pietre funerare sau monumente
-            personalizate.
-            Aranjarea lucrarilor de intretinere si amenajare a mormantului.</div>
+          <img src="./images/parastas.jpg" alt="">
+          <div class="service-text"><span>9. Servicii Post-Inmormantare. </span>Organizarea parastaselor la 40 de zile,
+            6 luni, un an, sau alte momente importante.
+            Asistenta pentru gestionarea mormantului sau a cavoului.</div>
         </div>
 
         <div class="service-card" id="11">
