--- a/index.html
+++ b/index.html
@@ -97,12 +97,17 @@
             si procedurile de inmormantare.
             Sprijin emotional pentru familie in aceasta perioada dificila.</div>
         </div>
-
       </div>
     </div>
     </div>
-
   </main>
+  <footer>
+    <div class="contact-info-wrapper">
+      <div>Contacteaza-ne</div>
+      <div>Telefon: <a href="tel:+40742444868">+40745 125 891</a></div>
+      <div>Email: <a href="mailto:tim.death@yahoo.com">tim.death@yahoo.com</a></div>
+    </div>
+  </footer>
 </body>
 
 </html>
